dr2/styles.css
body {
    background-color: aliceblue;
}

.container {
    margin-top: 10vh;
}

.hero {
    height: 90vh;
    width: 100vw;
    justify-content: center;
    align-items: center;
    margin-top: 0;
}

.hero-text {
    color: black;
}

.about {
    height: 70vh;
    width: 100vw;
}

.know {
    height: 100vh;
    width: 100vw;
}

footer {
    background-color: black;
    color: white;
    margin-top: 0vh;
}

.about-hero {
    max-width: 30vw;
}

p.h1 {
    margin-bottom: 3vh;
}

.hero-img {
    max-width: 20vw;
}

nav {
    background-color: white;
    color: black;
}

.card {
    border-radius: 20px;
}

.handshake {
    max-width: 25vw;
    max-height: 40vh;
}

.dr-logo {
    max-width: 5vw;
}

.spac {
    display: none;
}

.team {
    margin-top: 10vw;
}

@media (max-width: 480px) {
    .about-hero {
        max-width: 90vw;
    }

    .handshake {
        max-width: 90vw;
    }

    .spac {
        display: block;
    }

    .team {
        margin-top: 200vw;
    }
}

@media (max-width: 360px) {
    .team {
        margin-top: 300vw;
    }
}

@media (max-width: 768px) {
    .team {
        margin-top: 60vw;
    }
}

